# CMake-GitVersion

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
cmake/: GitVersion.cmake
example/: CMakeLists.txt  example-shared.cc  example-win.rc.in  example.cc  versionlib.cc
